--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,7 @@
     "files.associations": {
         ".fantomasignore": "ignore",
         "stdlib.h": "c"
-    }
+    },
+    "python-envs.defaultEnvManager": "ms-python.python:pyenv",
+    "python-envs.pythonProjects": []
 }
